src/scss/common.scss
@import "~scss/_vars";

* { padding: 0px; margin: 0px; border: 0px; box-sizing: border-box; }
html, body { height: 100%; }

body {
	font-family: 'Inter'; font-size: 14px; line-height: 22px; letter-spacing: 0.2px; color: $colorBlack;
	overflow-x: hidden; overflow-y: auto;
	-webkit-font-smoothing: antialiased;
	backface-visibility: hidden;
	transform-style: flat;
	overscroll-behavior: none;
}
body.colResize { cursor: col-resize !important; }
body.colResize * { cursor: col-resize !important; }
body.fullScreen {
	#drag { display: none; }
}

:focus { outline: 0px; }
::selection { background-color: Highlight; }

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus
input:-webkit-autofill, 
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus { transition: background-color 5000s ease-in-out 0s; }
input, textarea, select { font-family: 'Inter'; }

#drag { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 38px; z-index: -1; user-select: none; pointer-events: all; }
#drag {
	.sides { display: none; }
}
#root > .loaderWrapper { position: fixed; width: 100%; height: 100%; left: 0px; top: 0px; }
#root > .loaderWrapper {
	.logo { 
		width: 120px; height: 24px; background: url('~img/logo/color.svg') no-repeat; background-size: 100% 100%; 
		position: absolute; left: 50%; top: 50%; margin: -12px 0px 0px -60px; transition: opacity 0.5s ease-in-out;
	}
}

html.platformMac.version11 {
	#drag { height: 52px; }
}

html.platformWindows {
	#drag { height: 30px; background: $colorBlack; z-index: 1000; display: block; }
	#drag {
		.sides { display: flex; height: 100%; line-height: 30px; }
		.side { width: 50%; }
		.side.left { padding-left: 16px; }
		.side.right { text-align: right; }
		.side.right {
			.icon { width: 20px; height: 20px; margin-right: 20px; background-size: 16px 16px; }
			.icon:last-child { margin-right: 16px; }
		}

		.name { color: #fff; display: inline-block; vertical-align: middle; line-height: 1; margin-top: -2px; }

		.icon { cursor: pointer; -webkit-app-region: none; }
		.icon.menu { width: 20px; height: 20px; margin-right: 16px; background-image: url('~img/icon/header/windows/menu0.svg'); }
		.icon.min { background-image: url('~img/icon/header/windows/min0.svg'); }
		.icon.max { background-image: url('~img/icon/header/windows/max0.svg'); }
		.icon.close { background-image: url('~img/icon/header/windows/close0.svg'); }

		.icon.menu:hover { background-image: url('~img/icon/header/windows/menu1.svg'); }
		.icon.min:hover { background-image: url('~img/icon/header/windows/min1.svg'); }
		.icon.max:hover { background-image: url('~img/icon/header/windows/max1.svg'); }
		.icon.close:hover { background-image: url('~img/icon/header/windows/close1.svg'); }
	}

	.page { padding-top: 30px; }
	
	.header { top: 30px !important; }
	.header {
		.icon.logo { 
			width: 40px !important; height: 28px !important; background-size: 20px 20px !important; left: 6px; margin: 0px; top: 5px; 
			background-image: url('~img/logo/small.svg'); 
		}
	}

	::-webkit-scrollbar { width: 12px; }
	::-webkit-scrollbar-thumb { 
		width: 6px; background: rgba(0,0,0,0.5); border: 3px solid rgba(0, 0, 0, 0); border-radius: 6px; background-clip: padding-box; 
	}
	::-webkit-scrollbar-corner { background-color: transparent; }
	::-webkit-scrollbar-button { display: none; }
}

.dn { display: none !important; }
.txt { vertical-align: middle; display: inline-block; line-height: 1; }
.flex { display: flex; }
.cp { cursor: pointer !important; }
.nw { white-space: nowrap; }
.through { pointer-events: none; }
.rel { position: relative; }
.disabled { opacity: 0.5 !important; cursor: default !important; }
.dis { cursor: default !important; }
.isReadonly { -webkit-user-modify: unset !important; cursor: default !important; }
.no-br { border-radius: unset !important; }
.noAnimation { transition: none !important; }
.over { overflow: hidden !important; }
.empty { color: #cbc9bd; }
.isDone { color: $colorMediumGrey; }
.placeholder { 
	pointer-events: none; color: #cbc9bd; position: absolute; left: 0px; top: 0px; z-index: 0; width: 100%; height: 100%; cursor: text; 
	overflow: hidden;
}
::-webkit-input-placeholder { color: #cbc9bd !important; }

.fileWrap { position: relative; overflow: hidden; cursor: pointer; }
.fileWrap { 
	.input-file { position: absolute; left: 0px; top: 0px; opacity: 0; width: 100%; height: 100%; cursor: pointer; z-index: 100; padding: 0px; } 
}

a { color: $colorBlack; }
search { background: yellow !important; color: $colorBlack !important; border-radius: 2px; }
search.active { background: orange !important; }

.dropTarget.isOver.middle { background: rgba(255,187,44,0.3) !important; }
.dropTarget.isOver.top { box-shadow: 0px -2px 0px $colorOrange; }
.dropTarget.isOver.bottom { box-shadow: 0px 2px 0px $colorOrange; }
.dropTarget.isOver.left { box-shadow: -2px 0px 0px $colorOrange; }
.dropTarget.isOver.right { box-shadow: 2px 0px 0px $colorOrange; }

/* DropTarget for Layout.Row */
.dropTarget.targetTop.isOver.top { box-shadow: 0px -2px 0px $colorOrange inset; }
.dropTarget.targetBot.isOver.bottom { box-shadow: 0px 2px 0px $colorOrange inset; }

.textColor-default { color: $colorBlack !important; }
.textColor-black { color: $colorBlack !important; }
.textColor-grey { color: $colorMediumGrey !important; }
.textColor-yellow { color: $colorYellow !important; }
.textColor-orange { color: $colorOrange !important; }
.textColor-red { color: $colorRed !important; }
.textColor-pink { color: $colorPink !important; }
.textColor-purple { color: $colorPurple !important; }
.textColor-blue { color: $colorBlue !important; }
.textColor-ice { color: $colorIce !important; }
.textColor-teal { color: $colorTeal !important; }
.textColor-lime { color: $colorLime !important; }

.bgColor-grey { background: #f3f2ec !important; }
.bgColor-yellow { background: #fef9cc !important; }
.bgColor-orange { background: #fef3c5 !important; }
.bgColor-red { background: #ffebe5 !important; }
.bgColor-pink { background: #fee3f5 !important; }
.bgColor-purple { background: #f4e3fa !important; }
.bgColor-blue { background: #e4e7fc !important; }
.bgColor-ice { background: #d6effd !important; }
.bgColor-teal { background: #d6f5f3 !important; }
.bgColor-lime { background: #e3f7d0 !important; }

